fix(produtos): align and adjust icon sizes on categories menu
* refactor: modified url path

* fix: bookmark icon width

* fix: vertical tree alignment

* refactor: modified getProdutosLojista

--- a/src/app/components/tree/tree.component.scss
+++ b/src/app/components/tree/tree.component.scss
@@ -36,7 +36,7 @@ ul {
 }
 
 button {
-  width: 2rem;
+  min-width: 2rem;
   height: 2rem;
   padding: 0;
   border: none;
@@ -67,4 +67,8 @@ ul > li.active > .wrapper, ul ul > li.active {
 
 .top-list {
   overflow-y: scroll;
+}
+
+nb-icon.status-basic {
+  min-width: 20px;
 }
